# initGL

./: .gitignore  CMakeLists.txt  README.md
libraries/open-simplex-noise-in-c/: open-simplex-noise-test.c
resource/: 4.1.texture.frag  4.1.texture.vert  4.2.texture.frag  4.2.texture.vert  7.1.camera.craft.fs  7.1.camera.craft.vs  7.1.camera.fs  7.1.camera.vs  Texture.frag  Texture.vert
source/: Shader.c  Shader.cpp  Texture.cpp  main.c  main.cpp
source/tutorials1/: main.cpp
source/tutorials2/: Shader.cpp  Shader.h  Simple2D.frag  Simple2D.vert  main.cpp
source/tutorials3/: Texture.cpp  main.cpp
src/: Shader.c  Shader.h  Texture.h  camera.c  camera.h  input.c  input.h  main.c  main.c.4.1  main.c.4.1.window  main.c.4.4.vertex  main.c.7.1.boxes  main.c.bak  noise.c  noise.h  shader.c  shader.h  texture.c  texture.h  vertex.c  vertex.h  window.c  window.h
